--- a/myapp/src/components/navbar/Navbar.css
+++ b/myapp/src/components/navbar/Navbar.css
@@ -55,6 +55,14 @@
                 border-radius: 50%;
             }
 
+            .avatar-text{
+              font-size: 15px;
+              padding-left: 3px;
+              font-weight: bolder;
+            }
+
+
+
             .counter{
                 width: 15px;
                 height: 15px;
