--- a/myapp/src/components/widgets/Widget.css
+++ b/myapp/src/components/widgets/Widget.css
@@ -6,4 +6,49 @@
     box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
     border-radius: 10px;
     height: 100px;
+
+    .left, 
+    .right{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        .title{
+            font-weight: bold;
+            font-size: 14px;
+            color: rgb(160, 160, 160);
+        }
+
+        .counter{
+            font-size: 27px;
+            font-weight: bold;
+        }
+
+        .link{
+            width: max-content;
+            font-size: 12px;
+            border-bottom: 1px solid gray;
+        }
+
+        .percentage{
+            display: flex;
+            align-items: center;
+            font-size: 14px;
+
+            &.positve{
+                color: green;
+            }
+            
+            &.negative{
+                color: red;
+            }
+        }
+
+        .icon{
+            font-size: 14px;
+            padding: 5px;
+            border-radius: 5px;
+            align-self: flex-end;
+        }
+    }
 }
