--- a/myapp/src/pages/home/Home.css
+++ b/myapp/src/pages/home/Home.css
@@ -22,5 +22,15 @@
             padding: 20px;
             gap: 20px;
         }
+
+        .chart{
+            display: flex;
+            gap: 20px;
+            padding: 20px;
+        }
+
+        .charts{
+            padding: 5px 20px;
+        }
     }
 }
